--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </script>
     <style>
         .skill-bg{
-            background-image: url(img/pexels-tyler-lastovich-1616516.jpg);
+            background-image: url(img/pencil.jpg);
             background-size: cover;
             background-attachment: fixed;
         }
