--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
             color: navy;
             padding: 1%;
         }
+        @media (min-width:768px)and(max-width:1024px){
+            .foot-box{
+                height: 140px;
+            }
+        }
             
         
     </style>
