--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
                 <div class="col-sm">
                     <div class="card full" style="width: 18rem;">
-                        <img class="card-img-top" src="img/Screenshot (17).png" alt="Card image cap">
+                        <img class="card-img-top" src="todo.jpg" alt="Card image cap">
                         <div class="card-body">
                           <h5 class="card-title cen">To-Do-App</h5>
                           <p class="card-text">"PHP MySQL CRUD: Create, Read, Update, Delete operations for data."</p>
