--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                 </div>
             </div>
         </div>
+        <p>Currently i am working on various projects.These are updated soon.</p>
          </div>
         <!--project ends-->
         <!--contact starts-->
@@ -253,6 +254,7 @@
                 </div>
             </div>
         </div>
+        
         <!--contact ends-->
     </div>
 
